@@ -249,27 +249,6 @@ describe('Thirds Services', () => {
         })
     });
 
-    describe('#queryMenuEntryURL', () => {
-
-        it('should retrieve menu entry url if provided parameters are correct', (done) => {
-            const third = new Third(
-                't1', '', 'tLabel1', [], [], [],
-                [new ThirdMenuEntry('id1', 'label1', 'link1'),
-                    new ThirdMenuEntry('id2', 'label2', 'link2')]
-            )
-            thirdsService.queryMenuEntryURL('t1', '1', 'id2').subscribe(
-                result => {
-                    expect(result).toBe('link2');
-                    done();
-                }
-            )
-            let calls = httpMock.match(req => req.url == `${environment.urls.thirds}/t1/`);
-            expect(calls.length).toEqual(1);
-            calls[0].flush(third)
-        })
-
-    })
-
 })
 ;
 
