@@ -21,7 +21,6 @@ import {
 import {filter, map, switchMap} from "rxjs/operators";
 import {LoadArchivedCard, LoadCard} from "@ofActions/card.actions";
 import {ClearLightCardSelection, SelectLightCard} from "@ofActions/light-card.actions";
-import {SelectMenuLink} from "@ofActions/menu.actions";
 import {SelectArchivedLightCard} from "@ofActions/archive.actions";
 
 @Injectable()
@@ -57,27 +56,6 @@ export class CustomRouterEffects {
             return [
                 new LoadArchivedCard({id: routerState.params['cid']}),
                 new SelectArchivedLightCard({selectedCardId: routerState.params['cid']})
-            ];
-        })
-    );
-
-    /**
-     * This {Observable} listens for {ROUTER_NAVIGATION} type, filtering only actions navigating to an url containing "/thirdparty/".
-     * This will typically be triggered when clicking on a third-party menu link.
-     * It then fires a {SelectMenuLink} action containing the route parameters (identifying the third-party menu entry that was clicked) as payload.
-
-     * @name navigateToMenuURL
-     */
-    @Effect()
-    navigateToMenuURL: Observable<Action> = this.actions$.pipe(
-        ofType(ROUTER_NAVIGATION),
-        filter((action: RouterNavigationAction, index)=> {
-            return action.payload.event.url.indexOf("/thirdparty/")>=0;
-        }),
-        switchMap(action=>{
-            const routerState:any = action.payload.routerState;
-            return [
-                new SelectMenuLink({menu_id: routerState.params['menu_id'], menu_version: routerState.params['menu_version'],menu_entry_id: routerState.params['menu_entry_id']})
             ];
         })
     );
