@@ -7,12 +7,11 @@
 
 
 import {MenuEffects} from './menu.effects';
-import {getRandomAlphanumericValue, getRandomMenus} from '@tests/helpers';
+import {getRandomMenus} from '@tests/helpers';
 import {Actions} from '@ngrx/effects';
 import {hot} from 'jasmine-marbles';
-import {LoadMenu, LoadMenuSuccess, SelectMenuLink, SelectMenuLinkSuccess} from "@ofActions/menu.actions";
+import {LoadMenu, LoadMenuSuccess} from "@ofActions/menu.actions";
 import {of} from "rxjs";
-import {Router} from "@angular/router";
 
 describe('MenuEffects', () => {
     let effects: MenuEffects;
@@ -38,27 +37,5 @@ describe('MenuEffects', () => {
         expect(effects).toBeTruthy();
         expect(effects.load).toBeObservable(localExpected);
     });
-
-    it('should return SelectMenuLinkSuccess when third-party menu entry link exists', () =>{
-
-        const mockStore = jasmine.createSpyObj('Store',['dispatch']);
-        const localMockRouter = jasmine.createSpyObj('Router', ['navigate']);
-
-        const localActions$ = new Actions(hot('-a--', {a: new SelectMenuLink({menu_id: 't5',menu_version: '1',menu_entry_id: 'id1'})}));
-        const expected_url = getRandomAlphanumericValue(5,24);
-
-        const localMockMenuService = jasmine.createSpyObj('ThirdsService', ['queryMenuEntryURL']);
-        localMockMenuService.queryMenuEntryURL.and.returnValue(hot('---b', {b: expected_url}));
-
-        const expectedAction = new SelectMenuLinkSuccess({iframe_url: expected_url});
-        const localExpected = hot('---c', {c: expectedAction});
-
-        effects = new MenuEffects(mockStore, localActions$, localMockMenuService, localMockRouter);
-
-        expect(effects).toBeTruthy();
-        expect(effects.resolveThirdPartyLink).toBeObservable(localExpected);
-
-    })
-
 
 });
