@@ -18,9 +18,6 @@ import {
     LoadMenuFailure,
     LoadMenuSuccess,
     MenuActionTypes,
-    SelectMenuLink,
-    SelectMenuLinkFailure,
-    SelectMenuLinkSuccess
 } from "@ofActions/menu.actions";
 import {Router} from "@angular/router";
 
@@ -50,27 +47,6 @@ export class MenuEffects {
             })
         );
 
-    /**
-     * This {Observable} listens for {MenuActionTypes.SelectMenuLink} type.
-     * It then tries to get the corresponding menu link from the {ThirdsService}.
-     * If successful, it fires a {SelectMenuLinkSuccess} action with the result as payload.
-     * If not, it fires a {SelectMenuLinkFailure} action with the error as payload and navigates back to the index page
-     *
-     * @name resolveThirdPartyLink
-     */
-    @Effect()
-    resolveThirdPartyLink: Observable<Action> = this.actions$
-        .pipe(
-            ofType<SelectMenuLink>(MenuActionTypes.SelectMenuLink),
-            switchMap(action => this.service.queryMenuEntryURL(action.payload.menu_id, action.payload.menu_version, action.payload.menu_entry_id)),
-            map(url =>
-                new SelectMenuLinkSuccess({iframe_url: url})
-            ),
-            catchError(err => {
-                console.error(err);
-                this.router.navigate(['/']); //On error, redirect to index page
-                return of(new SelectMenuLinkFailure(err));
-            })
-        );
+
 
 }
